# fh6-drift-coach

./: .gitignore  README.md  main.py  pyproject.toml
assets/audio/: manifest.json
forza_coach/: __init__.py  config.py
forza_coach/coach/: audio.py  calibration.py  conventions.py  events.py  live.py  metrics.py
forza_coach/overlay/: app.py  theme.py
forza_coach/telemetry/: listener.py  packet.py  recorder.py  wheel.py
scripts/: analyze_session.py  generate_audio.py  inspect_recording.py  send_fake_telemetry.py
