[project]
name = "forza-drift-coach"
version = "0.1.0"
description = "Drift coach overlay for Forza Horizon 6, driven by the in-game Data Out UDP telemetry stream"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Direct G29/G920 wheel capture (second telemetry stream)
wheel = ["pygame>=2.6"]
